fix some contrast issues

--- a/eyecandy.css
+++ b/eyecandy.css
@@ -43,7 +43,7 @@
     --background-message-automod-hover: rgba(244, 219, 214, 0.1);
     --background-message-highlight: #3f3e4abf !important;
     --background-message-highlight-hover: #3e4a42bf !important;
-    --background-message-hover: var(--hover-2) !important;
+    --background-message-hover: #10132026 !important;
     --background-mobile-primary: var(--bg-2);
     --background-mobile-secondary: var(--bg-1);
     --background-mod-faint: var(--bg-card) !important;
@@ -213,7 +213,7 @@
     --status-danger-background: #C4967A;
     --yellow-300: #BDBAEB;
     --spine-default: var(--candy-accent-2) !important;
-    --status-online: #ff0;
+    --status-online: var(--candy-green);
     --text-brand: #B17B93 !important;
     --text-feedback-critical: #C4967A !important;
     --text-muted: var(--text-3) !important;
@@ -231,13 +231,18 @@
     .listContainer__527b1 .listElement__527b1 
     { background-color: var(--bg-1); }
 
-    .folderIconContent__93fc9, .circleIconButton__5bc7e, .discoveryIcon_ef3116
+    .folderIconContent__93fc9, .circleIconButton__5bc7e, .discoveryIcon_ef3116, .shinyButton__6a443
     { background: var(--bg-2); }
+
+    .guildStatusCopy_f9f04c
+    { color: var(--bg-1); }
 
     .lookFilled__201d5, .botTagVerified__82f07, .botText__82f07, .newBadge_d541c3, .textBadge__2b1f5, .tabBar__133bf .addFriend__133bf.addFriend__133bf.addFriend__133bf,
     .numberBadge__2b1f5, .iconBadge__650eb,
-    .wrapper__6e9f8.selected__6e9f8 .childWrapper__6e9f8
-    { color: var(--bg-2); }
+    .wrapper__6e9f8.selected__6e9f8 .childWrapper__6e9f8,
+    .heading__6fd0e, .guildName_f9f04c, .tierCardCurrentTier_be48d0, .tierCardHeading_be48d0, .tierCardListItem_be48d0, .tierCardBoostRequirement_be48d0,
+    .newTopicsBarContainer__0f481, .newTopicsBarText__0f481
+    { color: var(--bg-2) !important; }
 
     .themedBackground__74017, .searchBar__97492, .searchBar_c7e907, .searchBar__5ec2f
     { background: var(--bg-4); }
@@ -246,29 +251,45 @@
     .connectContainer_c7f964, .connection_c7f964
     { background: var(--bg-card) ;}
     
-    .barFill_a562c8, .grabber_a562c8
+    .barFill_a562c8, .grabber_a562c8, .akaBadge__488b1
     { background: var(--control-brand-foreground-new); }
 
-    :where(.buttonInner_fb7f94).icon_fb7f94
+    :where(.buttonInner_fb7f94).icon_fb7f94, .button__5d39a
     { color: var(--text-1); }
 
     .lookFilled__201d5.colorPrimary__201d5
-    { color: var(--text-1); }
+    { color: var(--text-1) !important; }
 
     .side_b3f026 .themed_b3f026.item_b3f026:hover:not(.disabled_b3f026),
     .interactive_bf202d:hover, .container_e97453:hover
     { background: var(--hover-1); }
 
-    .redGlow__67645 { background-color: #c4957866 !important; } 
+    .timestamp__75297, .sectionDivider__629e4,
+    .container__87bf1, .shinyButton__6a443:hover, .bar_a562c8
+    { background: #696779 !important; }
+ 
+    .barButtonAlt__0f481
+    { background-color: var(--candy-accent); }
+
+    .barButtonAlt__0f481:hover
+    { background-color: var(--candy-accent-hover); }
+
+    .joinOptionContent__959cb.active__959cb
+    { background-color: #B17B93; }
+
+    .container__87bf1.checked__87bf1
+    { background: #C2A775!important; }
+
+    .redGlow__67645
+    { background-color: #c4957866 !important; } 
 
     .input__0f084:not([readOnly]):focus, .container_a45028:focus-within, .topicsDropdownBase__0f481
     { border-color: #696779; }
 
-    .numberBadge__2b1f5  { --status-danger: #DFBE80; }
+    .vc-gp-tab-bar, .vc-settings-tab-bar, .tabBar_d6f9e9, .tabBar_f8303a
+    { border-bottom: 2px solid #696779 !important; }
 
-    .joinOptionContent__959cb.active__959cb { background-color: #B17B93; }
-    .container__87bf1, .shinyButton__6a443:hover, .bar_a562c8 { background: #696779!important; }
-    .container__87bf1.checked__87bf1 { background: #C2A775!important; }
+    .numberBadge__2b1f5  { --status-danger: #DFBE80; }
 
     .refreshIcon__001a7 { 
      fill: var(--bg-2); }
